--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "dayjs": "^1.10.7",
     "formik": "^2.2.9",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
